mock: ensure yum resolve only using ipv4
This change tries to fix issues about unreachable ipv6 route:
  "Failed to connect to 2606:d280:3::2: Network is unreachable"

Change-Id: I13c61c293888c53b40da27ba4486b53c1e596086

--- a/mock.cfg.j2
+++ b/mock.cfg.j2
@@ -19,6 +19,7 @@ assumeyes=1
 syslog_ident=mock
 syslog_device=
 mdpolicy=group:primary
+ip_resolve=4
 
 # repos
 {% for repo in repos %}
@@ -32,6 +33,7 @@ baseurl={{ repo.baseurl }}
 gpgkey={{ repo.gpgkey }}
 gpgcheck={{ repo.gpgcheck }}
 enabled=1
+ip_resolve=4
 
 {% endfor %}
 """
